# low-cost-vision

./: BOWDTreeClassifier.cpp  BOWSVMClassifier.cpp  Makefile.generic  ProjectHome.md  desktop.ini
Code/: .cproject
Deltarobot/gripper/: Makefile
Deltarobot/gripper_test/: readme.txt
Deltarobot/huniplacer/: .cproject  .project  Makefile
Deltarobot/huniplacer_gui/: Makefile
Demo/cratedemo/: CMakeCache.txt  Makefile  cmake_install.cmake  manifest.xml
Demo/huniplacer_3d/: CMakeLists.txt  Makefile
Demo/vision/: CMakeLists.txt  DeltaLens_2012-01-17.xml  manifest.xml
MAST/MastTree/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
MAST/MastTreeTestCase/: README.txt
MAST/MyProject/: .cproject  .project  Makefile  MyProject.doxyfile
MAST/Piraat/: .cproject  .project
MakefileTemplate/: Makefile  Makefile-standalone  readme
TO6-2/: .project
Vision/BOWClassifier/: .cproject  Makefile  README.txt
Vision/CrateDemo/: .project  Makefile  README.txt
Vision/CrateGUI/: Makefile  README.TXT  TestSet.Doxyfile
Vision/CreateCameraCalibratieMatrix/: .project  .pydevproject  Makefile
Vision/CreateReport/: Makefile  README.TXT
Vision/DetectQRCode/: .cproject  .project  HomeBuild  Makefile  README.TXT  Run
Vision/DifferentsesSeparation/: .project  .pydevproject  CMakeLists.txt  Makefile  README.TXT
Vision/FGBGSeparation/: Makefile  tree.xml
Vision/FGBGSeperation/: .pydevproject  CMakeLists.txt  manifest.xml
Vision/FGBGSeperation_test/: Makefile
Vision/Fiducial/: .cproject  .project  Crate.h  FiducialDetector.cpp  FiducialDetector.h  Makefile  main.cpp
Vision/FiducialROS/: CMakeLists.txt  manifest.xml
Vision/ImageMetaDataWrapper/: Makefile  wrapper.Doxyfile
Vision/MetaDataApp/: .project  GUI  HomeBuild.sh  Manual.odt
Vision/PixelCord_RealifeCord_Transformation/: Makefile
Vision/StereoVision/: Makefile
Vision/StereoVisionDepth/: .cproject  .project  Makefile  StereoVisionDepth.Doxyfile  intrinsics.yml  readme.txt
Vision/StereoVisionTakeImage/: .cproject  .pydevproject
Vision/TestBenchGUI/: Scripts.cpp  Scripts.h  TestbenchGUI.pjd  TestbenchGUI.pjd.bak  addjobwizard.cpp  addjobwizard.h  filedialog.cpp  filedialog.h  mainframe.cpp  mainframe.h  tbGUI  testbenchguiapp.cpp  testbenchguiapp.h
Vision/TestBenchPython/: README.TXT
Vision/TestBenchTools/: Makefile  README.TXT  TODO.txt  tbt.Doxyfile
Vision/captureImage/: .project  Makefile  README.TXT  captureImage  makefile
Vision/lens_correction/: .cproject  .project  (+2 more)
trunk/: BOWBayesClassifier.cpp  BOWNeuralClassifier.cpp  Doxyfile  Makefile.generic
trunk/Demo/vision/: CMakeLists.txt  mainpage.dox  trainXML.xml
trunk/Demo/vision/include/vision/: crateTracker.h  visionNode.h
trunk/Demo/vision/src/: visionNode.cpp
(+754 files in other folders)
